Library/AXL(Library)/C#/AXDev.cs


//////////////////////////////////////////////////////////////////////////
// MonitorEx
// Add an item to proceed with data collection.
[DllImport("AXL.dll")] public static extern uint AxlMonitorExSetItem(int nItemIndex, uint dwSignalType, int nSignalNo, int nSubSignalNo);


// Gets information about the items to be collected.
[DllImport("AXL.dll")] public static extern uint AxlMonitorExGetIndexInfo(ref int npItemSize, ref int npItemIndex);


// Gets the detailed settings for each item to proceed with data collection.
[DllImport("AXL.dll")] public static extern uint AxlMonitorExGetItemInfo(int nItemIndex, ref uint dwpSignalType, ref int npSignalNo, ref int npSubSignalNo);


// Reset the settings for all data collection items.
[DllImport("AXL.dll")] public static extern uint AxlMonitorExResetAllItem();


// Reset the settings of the selected data collection item.
[DllImport("AXL.dll")] public static extern uint AxlMonitorExResetItem(int nItemIndex);


// Sets the trigger condition for data collection.
[DllImport("AXL.dll")] public static extern uint AxlMonitorExSetTriggerOption(uint dwSignalType, int nSignalNo, int nSubSignalNo, uint dwOperatorType, double dValue1, double dValue2);



// Reset trigger conditions for data collection.
[DllImport("AXL.dll")] public static extern uint AxlMonitorExResetTriggerOption();


// Start collecting data.
[DllImport("AXL.dll")] public static extern uint AxlMonitorExStart(uint dwStartOption, uint dwOverflowOption);


// Stop collecting data.
[DllImport("AXL.dll")] public static extern uint AxlMonitorExStop();


// Gets collected data.
[DllImport("AXL.dll")] public static extern uint AxlMonitorExReadData(ref long lpItemSize, ref long lpDataCount, ref double dpReadData);


// Gets the period of data collection.
[DllImport("AXL.dll")] public static extern uint AxlMonitorExReadPeriod(ref uint dwpPeriod);



//////////////////////////////////////////////////////////////////////////

// Linear interpolation about 2 axis including information of offset position for X2, Y2 axis.
[DllImport("AXL.dll")] public static extern uint AxmLineMoveDual01(int nCoordNo, ref double dpEndPosition, double dVelocity, double dAccel, double dDecel, double dOffsetLength, double dTotalLength, ref double dpStartOffsetPosition, ref double dpEndOffsetPosition);
// Arc interpolation about 2 axis including information of offset position for X2, Y2 axis.
[DllImport("AXL.dll")] public static extern uint AxmCircleCenterMoveDual01(int nCoordNo, ref int npAxes, ref double dpCenterPosition, ref double dpEndPosition, double dVelocity, double dAccel, double dDecel, uint dwCWDir, double dTotalLength, ref double dpStartOffsetPosition, ref double dpEndOffsetPosition);

// About ECAT Foe
[DllImport("AXL.dll")] public static extern uint AxdSetFirmwareUpdateInfo(int nModuleNo, uint dwTotalDataSize, uint dwTotalPacketSize);
[DllImport("AXL.dll")] public static extern uint AxdSetFirmwareDataTrans(int nModuleNo, uint dwPacketIndex, ref uint dwaPacketData);
[DllImport("AXL.dll")] public static extern uint AxdSetFirmwareUpdate(int nModuleNo, char[] szFileName, uint dwFileNameLen, uint dwPassWord);
[DllImport("AXL.dll")] public static extern uint AxdSetFirmwareUpdate(int nModuleNo, string szFileName, uint dwFileNameLen, uint dwPassWord);


[DllImport("AXL.dll")] public static extern uint AxaSetFirmwareUpdateInfo(int nModuleNo, uint dwTotalDataSize, uint dwTotalPacketSize);
[DllImport("AXL.dll")] public static extern uint AxaSetFirmwareDataTrans(int nModuleNo, uint dwPacketIndex, ref uint dwaPacketData);
[DllImport("AXL.dll")] public static extern uint AxaSetFirmwareUpdate(int nModuleNo, char[] szFileName, uint dwFileNameLen, uint dwPassWord);
[DllImport("AXL.dll")] public static extern uint AxaSetFirmwareUpdate(int nModuleNo, string szFileName, uint dwFileNameLen, uint dwPassWord);


[DllImport("AXL.dll")] public static extern uint AxmSetFirmwareUpdateInfo(int nAxisNo, uint dwTotalDataSize, uint dwTotalPacketSize);
[DllImport("AXL.dll")] public static extern uint AxmSetFirmwareDataTrans(int nAxisNo, uint dwPacketIndex, ref uint dwaPacketData);
[DllImport("AXL.dll")] public static extern uint AxmSetFirmwareUpdate(int nAxisNo, char[] szFileName, uint dwFileNameLen, uint dwPassWord);
[DllImport("AXL.dll")] public static extern uint AxmSetFirmwareUpdate(int nAxisNo, string szFileName, uint dwFileNameLen, uint dwPassWord);
[DllImport("AXL.dll")] public static extern uint AxmSetFoeUploadInfo(int lAxisNo, uint dwTotalDataSize, uint dwTotalPacketSize);
[DllImport("AXL.dll")] public static extern uint AxmGetFoeUploadData(int lAxisNo, uint dwPacketIndex, ref uint dwaPacketData);
[DllImport("AXL.dll")] public static extern uint AxmSetFoeUpload(int lAxisNo, char[] szFileName, uint dwFileNameLen, uint dwPassWord);
[DllImport("AXL.dll")] public static extern uint AxmSetFoeUpload(int lAxisNo, string szFileName, uint dwFileNameLen, uint dwPassWord);


[DllImport("AXL.dll")] public static extern uint AxmMotSetOperationMode(int nAxisNo, uint dwOperationMode);
[DllImport("AXL.dll")] public static extern uint AxmMotGetOperationMode(int nAxisNo, ref uint pdwOperationMode);



[DllImport("AXL.dll")] public static extern uint AxcTriggerSetPatternData(int lChannelNo, int nDataCnt, uint dwOption, double[] dpPatternData);
[DllImport("AXL.dll")] public static extern uint AxcTriggerGetPatternData(int lChannelNo, ref int npDataCnt, ref uint dwpOption, double[] dpPatternData);

[DllImport("AXL.dll")] public static extern uint AxmSpiralMoveEx(int lCoordNo, double dSpiralPitch, double dTurningCount, double dAngleOfPose, uint dwIsInnerDirection, double dVelocity, double dAcceleration, double dDeceleration);
[DllImport("AXL.dll")] public static extern uint AxmFilletMove(int lCoordinate, ref double dPosition, ref double dFirstVector, ref double dSecondVector, double dMaxVelocity, double dMaxAccel, double dMaxDecel, double dRadius);

[DllImport("AXL.dll")] public static extern uint AxmSignalIsServoOnSingleAxis(int lAxisNo, ref uint upOnOff);

[DllImport("AXL.dll")] public static extern uint AxmMotSetTorqueConnection(int lAxisNo, int lSourceAxisNo, uint dwEnable);
[DllImport("AXL.dll")] public static extern uint AxmMotGetTorqueConnection(int lAxisNo, ref int plSourceAxisNo, ref uint pdwEnable);


}
